syntax = "proto3";

option csharp_namespace = "RapidTime.Frontend";

import "google/protobuf/empty.proto";

package city;

service City {
  rpc GetCity (GetCityRequest) returns (CityResponse);
  rpc MultiCity (GetCityRequest) returns (MultiCityResponse);
  rpc CreateCity (CreateCityRequest) returns (google.protobuf.Empty);
  rpc FindCity (stream FindCityRequest) returns (stream MultiCityResponse);
  rpc FindCitySingular (FindCityRequest) returns (MultiCityResponse);
}

message GetCityRequest {
  int32 id = 1;
}

message CityResponse {
  CityBase citybase = 1;
}

message MultiCityResponse {
  repeated CityResponse response = 1;
}

message CreateCityRequest {
  string postalCode = 1;
  string cityName = 2;
  string country = 3;
}

message FindCityRequest {
  string input = 1;
}

message CityBase {
  int32 id = 1;
  string postalCode = 2;
  string cityName = 3;
}